Revert "换个 ZGC!"
This reverts commit a73cdc3c87c1af993191d3c44a6eabd8bb053c5a.